--- a/angular.json
+++ b/angular.json
@@ -39,8 +39,7 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/fontawesome.css",
-              "src/styles.css",
-              "src/assets/css/styles.css"
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.js"
